--- a/templates/log.html
+++ b/templates/log.html
@@ -238,16 +238,17 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Player List</h2>
-<div class="w3-container"><h5 class="w3-opacity"><b>bladezz&nbsp;&nbsp;&nbsp;</b><span class="w3-tag w3-teal w3-round">Online</span></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>Brennan3g&nbsp;&nbsp;&nbsp;</b><span class="w3-tag w3-teal w3-round">Online</span></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>douglasjohnnyhit&nbsp;&nbsp;&nbsp;</b><span class="w3-tag w3-teal w3-round">Online</span></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>thursday.&nbsp;&nbsp;&nbsp;</b><span class="w3-tag w3-teal w3-round">Online</span></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>verlus&nbsp;&nbsp;&nbsp;</b><span class="w3-tag w3-teal w3-round">Online</span></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>idopey&nbsp;&nbsp;&nbsp;</b></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>Sir Crank&nbsp;&nbsp;&nbsp;</b></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>stickyfingaz&nbsp;&nbsp;&nbsp;</b></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>UltraGold&nbsp;&nbsp;&nbsp;</b></h5><hr></div>
+<div class="w3-container"><h5 class="w3-opacity"><b>bladezz&nbsp;&nbsp;&nbsp;</b><span class="w3-tag w3-teal w3-round">Online</span></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>Brennan3g&nbsp;&nbsp;&nbsp;</b><span class="w3-tag w3-teal w3-round">Online</span></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>thursday.&nbsp;&nbsp;&nbsp;</b><span class="w3-tag w3-teal w3-round">Online</span></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>verlus&nbsp;&nbsp;&nbsp;</b><span class="w3-tag w3-teal w3-round">Online</span></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>douglasjohnnyhit&nbsp;&nbsp;&nbsp;</b></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>idopey&nbsp;&nbsp;&nbsp;</b></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>Sir Crank&nbsp;&nbsp;&nbsp;</b></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>stickyfingaz&nbsp;&nbsp;&nbsp;</b></h5><hr></div><div class="w3-container"><h5 class="w3-opacity"><b>UltraGold&nbsp;&nbsp;&nbsp;</b></h5><hr></div>
 </div>
 
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Log</h2>
-        <code class="codebox">douglasjohnnyhit online 08:50PM Sun 07 Jul
-verlus online 06:54PM Sun 07 Jul
+        <code class="codebox">verlus online 06:54PM Sun 07 Jul
 Brennan3g online 06:23PM Sun 07 Jul
 bladezz online 10:37PM Sun 07 Jul
 thursday. online 06:28PM Sun 07 Jul
+UltraGold online 11:35PM Sun 07 Jul
+UltraGold offline 11:37PM Sun 07 Jul
 
 </code>
         
@@ -265,7 +266,7 @@ thursday. online 06:28PM Sun 07 Jul
 </div>
 
 <footer class="w3-container w3-teal w3-center w3-margin-top" style="line-height: 1 paddin;">
-  <p>© 2019 UltraGold | Contact me to add more players.</p><p>Up to date as of 11:00PM Sun 07 Jul
+  <p>© 2019 UltraGold | Contact me to add more players.</p><p>Up to date as of 11:38PM Sun 07 Jul
   
 </footer>
 
